# leetcode

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  1342_number_of_steps.ts  1672_richest_customer_wealth.ts  1_two_sum.ts  20_valid_parentheses.ts  21_merge_two_sorted_lists.ts  26_remove_duplicates_from_sorted_array.ts  27_remove_element.ts  28_find_index_first_occurrence.ts  35_search_insert_position.ts  383_ransom_note.ts  414_third_max_number.ts  876_middle_of_linked_list.ts  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  problems.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_problem.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  readme.yml  scorecard.yml  stale.yml
leetcode-php/: .php-cs-fixer.php  README.md  composer.json  phpstan.neon  phpunit.xml
leetcode-php/src/: P0001TwoSum.php
leetcode-php/src/P0001TwoSum/: Solution.php  SolutionTest.php
leetcode-php/src/P0002AddTwoNumbers/: ListNode.php  Solution.php  SolutionTest.php
leetcode-php/tests/: P0001TwoSumTest.php
leetcode-rs/: Cargo.toml  README.md
leetcode-rs/src/: lib.rs  p0001_two_sum.rs  p0002_add_two_numbers.rs  p0003_longest_substring_without_repeating_characters.rs
leetcode-ts/: README.md  package.json  tsconfig.json  vitest.config.ts
scripts/: _lib.mjs  generate-readme.mjs  new-problem.mjs  problems.schema.json
(+8 files in other folders)
